updated formatting and limited gif sizing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
-.html {
-    background-image: url(../images/tiny-squares.zip);
+html body {
+    background-image: url(../images/tiny-squares.png);
 }
 
 .card-header {
